# SoloBot

./: .breakpoints  .cache  .cache.backup  README.md  ReadMe.md  main.py  pyproject.toml  pyproject.toml.working  replit.nix  response.txt
jsons/: calan.json  song_queue.json
txts/: editlenenmesajlar.txt  history.txt  silinenmesajlar.txt
