[tool.poetry]
name = "SoloBot"
version = "1.8.12"
description = ""
authors = ["Solø#8416"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.0"
Flask = "^2.0.2"
replit = "^3.2.4"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.6.6"
gTTS = "^2.2.3"
instaloader = "^4.9"
requests = "^2.28.1"
roblox = "^2.0.0"
qrcode = "^7.3.1"
spotipy = "^2.20.0"
openai = "^0.27.2"
yt-dlp = "^2023.3.4"
IMDbPY = "^2022.7.9"
Pillow = "^9.5.0"
wikipedia = "^1.4.0"
[tool.poetry.dev-dependencies]
replit-python-lsp-server = {version = "^1.5.9", extras = ["yapf", "rope", "pyflakes"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
